--- a/Website/src/main/webapp/WEB-INF/web.xml
+++ b/Website/src/main/webapp/WEB-INF/web.xml
@@ -1,50 +1,44 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
-  <servlet>
-    <servlet-name>spring</servlet-name>
-    <servlet-class>
-      org.springframework.web.servlet.DispatcherServlet
-    </servlet-class>
-    <load-on-startup>2</load-on-startup>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>spring</servlet-name>
-    <url-pattern>*.html</url-pattern>
-  </servlet-mapping>
-  <session-config>
-    <session-timeout>30</session-timeout>
-  </session-config>
-  <welcome-file-list>
-    <welcome-file>search.jsp</welcome-file>
-  </welcome-file-list>
-  <servlet>
-    <description></description>
-    <display-name>SearchResultServlet</display-name>
-    <servlet-name>SearchResultServlet</servlet-name>
-    <servlet-class>classes.searchResult.SearchResultServlet</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>SearchResultServlet</servlet-name>
-    <url-pattern>/SearchResultServlet</url-pattern>
-  </servlet-mapping>
-  <servlet>
-    <description></description>
-    <display-name>ProcessPageFiles</display-name>
-    <servlet-name>ProcessPageFiles</servlet-name>
-    <servlet-class>classes.processing.ProcessPageFiles</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>ProcessPageFiles</servlet-name>
-    <url-pattern>/ProcessPageFiles</url-pattern>
-  </servlet-mapping>
-  <servlet>
-    <description></description>
-    <display-name>CrawlerServlet</display-name>
-    <servlet-name>CrawlerServlet</servlet-name>
-    <servlet-class>classes.crawler.CrawlerServlet</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>CrawlerServlet</servlet-name>
-    <url-pattern>/CrawlerServlet</url-pattern>
-  </servlet-mapping>
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xmlns="http://java.sun.com/xml/ns/javaee"
+	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
+	version="2.5">
+	<servlet>
+		<description></description>
+		<display-name>SearchResultServlet</display-name>
+		<servlet-name>SearchResultServlet</servlet-name>
+		<servlet-class>classes.searchResult.SearchResultServlet</servlet-class>
+		<load-on-startup>2</load-on-startup>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>SearchResultServlet</servlet-name>
+		<url-pattern>/SearchResultServlet</url-pattern>
+	</servlet-mapping>
+	<session-config>
+		<session-timeout>30</session-timeout>
+	</session-config>
+	<welcome-file-list>
+		<welcome-file>search.jsp</welcome-file>
+	</welcome-file-list>
+
+	<servlet>
+		<description></description>
+		<display-name>ProcessPageFiles</display-name>
+		<servlet-name>ProcessPageFiles</servlet-name>
+		<servlet-class>classes.processing.ProcessPageFiles</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>ProcessPageFiles</servlet-name>
+		<url-pattern>/ProcessPageFiles</url-pattern>
+	</servlet-mapping>
+	<servlet>
+		<description></description>
+		<display-name>CrawlerServlet</display-name>
+		<servlet-name>CrawlerServlet</servlet-name>
+		<servlet-class>classes.crawler.CrawlerServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>CrawlerServlet</servlet-name>
+		<url-pattern>/CrawlerServlet</url-pattern>
+	</servlet-mapping>
 </web-app>
